--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <use href="#octicon-link"/>
   </svg>
 </a>m3u8</h1>
-<p><a href="https://travis-ci.org/akiicat/m3u8"><img src="https://travis-ci.org/akiicat/m3u8.svg?branch=master" alt="Build Status" /></a>
+<p><a href="https://github.com/akiicat/m3u8/actions"><img src="https://github.com/akiicat/m3u8/actions/workflows/crystal.yml/badge.svg" alt="Build Status" /></a>
 <a href="https://akiicat.github.io/m3u8"><img src="https://img.shields.io/badge/docs-available-brightgreen.svg" alt="Docs" /></a>
 <a href="https://github.com/akiicat/m3u8/releases"><img src="https://img.shields.io/github/release/akiicat/m3u8.svg" alt="GitHub release" /></a></p>
 <p>Generate and parse m3u8 playlists for HTTP Live Streaming (HLS).</p>
